updated add icon

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -49,7 +49,8 @@
 </div>
 
 <div class="d-block d-md-none">
-  <button class="btn btn-md btn-dark position-fixed bottom-0 end-0 rounded-circle" style="margin: 5rem 2rem; position:fixed;" data-bs-toggle="modal" data-bs-target="#enroll">+</button>
+  <!-- <button class="fa-solid fa-circle-plus position-fixed bottom-0 end-0" style="margin: 5rem 2rem; position:fixed;" data-bs-toggle="modal" data-bs-target="#enroll"></button> -->
+  <i class="fa-3x fa-solid fa-circle-plus position-fixed bottom-0 end-0" style=" margin: 5rem 2rem; position:fixed;" data-bs-toggle="modal" data-bs-target="#enroll"></i>
   </div>
 
 </div>
